modified chat api so it can be used also by chat-svc
